care-australia-uat/force-app/main/default/objects/Charge__c/Charge__c.object-meta.xml
<CustomObject>
    <description>Used to store charge coming from Stripe. The charge object will use in batch to update the respective Payment record.</description>
    <label>Charge</label>
    <nameField>
        <displayFormat>Ch-{00000000}</displayFormat>
        <label>Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>