care-australia-uat/force-app/main/default/objects/Charge__c/fields/Account_BSB__c.field-meta.xml
<CustomField>
    <fullName>Account_BSB__c</fullName>
    <label>Account BSB</label>
    <length>20</length>
    <type>Text</type>
</CustomField>