care-australia-uat/force-app/main/default/objects/Charge__c/fields/Account_Last_Digits__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Digits__c</fullName>
    <label>Account Last Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>