care-australia-uat/force-app/main/default/objects/Charge__c/fields/Account_Token__c.field-meta.xml
<CustomField>
    <fullName>Account_Token__c</fullName>
    <label>Account Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>