care-australia-uat/force-app/main/default/objects/Charge__c/fields/Card_Expiration_Year__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiration_Year__c</fullName>
    <label>Card Expiration Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>