care-australia-uat/force-app/main/default/objects/Charge__c/fields/Card_Last_Digits__c.field-meta.xml
<CustomField>
    <fullName>Card_Last_Digits__c</fullName>
    <label>Card Last Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>