care-australia-uat/force-app/main/default/objects/Charge__c/fields/Card_Token__c.field-meta.xml
<CustomField>
    <fullName>Card_Token__c</fullName>
    <label>Card Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>