care-australia-uat/force-app/main/default/objects/Charge__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>