care-australia-uat/force-app/main/default/objects/Charge__c/fields/Donation_Source__c.field-meta.xml
<CustomField>
    <fullName>Donation_Source__c</fullName>
    <label>Donation Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>