care-australia-uat/force-app/main/default/objects/Charge__c/fields/Failure_Code__c.field-meta.xml
<CustomField>
    <fullName>Failure_Code__c</fullName>
    <label>Failure Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>