care-australia-uat/force-app/main/default/objects/Charge__c/fields/Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will determine if the batch has been run successfully for the particular record</description>
    <label>Is Processed</label>
    <type>Checkbox</type>
</CustomField>