care-australia-uat/force-app/main/default/objects/Charge__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Opportunity Id from Charge object, inserted from sequence shift on Stripe</description>
    <label>Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>