care-australia-uat/force-app/main/default/objects/Charge__c/fields/Outcome_Reason__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Reason__c</fullName>
    <label>Outcome Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>