care-australia-uat/force-app/main/default/objects/Charge__c/fields/Payment_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Created_Date__c</fullName>
    <label>Payment Created Date</label>
    <type>Date</type>
</CustomField>