care-australia-uat/force-app/main/default/objects/Charge__c/fields/RD_Installment_Day_Of_Month__c.field-meta.xml
<CustomField>
    <fullName>RD_Installment_Day_Of_Month__c</fullName>
    <label>RD Installment Day Of Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>