care-australia-uat/force-app/main/default/objects/Charge__c/fields/RD_Installment_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>RD_Installment_Effective_Date__c</fullName>
    <label>RD Installment Effective Date</label>
    <type>Date</type>
</CustomField>