care-australia-uat/force-app/main/default/objects/Charge__c/fields/RD_Installment_Every__c.field-meta.xml
<CustomField>
    <fullName>RD_Installment_Every__c</fullName>
    <description>RD installment period for every month</description>
    <label>RD Installment Every</label>
    <length>20</length>
    <type>Text</type>
</CustomField>