care-australia-uat/force-app/main/default/objects/Charge__c/fields/RD_Installment_Period__c.field-meta.xml
<CustomField>
    <fullName>RD_Installment_Period__c</fullName>
    <description>RD installment period</description>
    <label>RD Installment Period</label>
    <length>20</length>
    <type>Text</type>
</CustomField>