care-australia-uat/force-app/main/default/objects/Charge__c/fields/RD_Number_of_Installments__c.field-meta.xml
<CustomField>
    <fullName>RD_Number_of_Installments__c</fullName>
    <label>RD Number of Installments</label>
    <length>10</length>
    <type>Text</type>
</CustomField>