care-australia-uat/force-app/main/default/objects/Charge__c/fields/Recurring_Donation_Id__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation_Id__c</fullName>
    <description>Recurring Donation Id from Charge object, coming from Sequence Shift</description>
    <label>Recurring Donation Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>