care-australia-uat/force-app/main/default/objects/Charge__c/fields/Stripe_Charge_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Charge_Id__c</fullName>
    <description>External id of Charge, coming from Charge webhook response</description>
    <externalId>true</externalId>
    <label>Stripe Charge Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>