care-australia-uat/force-app/main/default/objects/Charge__c/fields/Stripe_Charge_Status__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Charge_Status__c</fullName>
    <description>Status of a Charge</description>
    <label>Stripe Charge Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>failed</fullName>
            </value>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>succeeded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>