care-australia-uat/force-app/main/default/objects/Charge__c/fields/Stripe_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Invoice_Id__c</fullName>
    <label>Stripe Invoice Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>