care-australia-uat/force-app/main/default/objects/Charge__c/fields/Stripe_Payment_Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Intent_Id__c</fullName>
    <description>Stripe Payment intent id</description>
    <label>Stripe Payment Intent Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>