care-australia-uat/force-app/main/default/objects/Charge__c/fields/Stripe_Payment_Method_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Method_Id__c</fullName>
    <label>Stripe Payment Method Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>